# SystemSofware1-MemAllocator

./: .gitignore  CMakeLists.txt  readme
src/: main.c  printer.c  printer.h
src/allocator/: allocator.c  allocator.h  memstruct.c  memstruct.h
